criando seção de descrição dos dados

--- a/store_sales_prediction.ipynb
+++ b/store_sales_prediction.ipynb
@@ -50,6 +50,106 @@
     "#merge\n",
     "df_raw = pd.merge(df_sales_raw, df_store_raw, how='left', on='Store')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.0 DESCRIÇÃO DOS DADOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.1. Rename Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo',\n",
+       "       'StateHoliday', 'SchoolHoliday', 'StoreType', 'Assortment',\n",
+       "       'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+       "       'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+       "       'Promo2SinceYear', 'PromoInterval'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_raw.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#função que irá formatar as palavras da coluna do dataframe. Eles ficaram todos com letra minusculas e separadas por _\n",
+    "cols_old = ['Store', 'DayOfWeek', 'Date', 'Sales', 'Customers', 'Open', 'Promo', 'StateHoliday', \n",
+    "            'SchoolHoliday', 'StoreType', 'Assortment',\n",
+    "            'CompetitionDistance', 'CompetitionOpenSinceMonth',\n",
+    "            'CompetitionOpenSinceYear', 'Promo2', 'Promo2SinceWeek',\n",
+    "            'Promo2SinceYear', 'PromoInterval']\n",
+    "\n",
+    "snakecase = lambda x: inflection.underscore(x)\n",
+    "\n",
+    "cols_new = list(map(snakecase,cols_old))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.columns = cols_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['store', 'day_of_week', 'date', 'sales', 'customers', 'open', 'promo',\n",
+       "       'state_holiday', 'school_holiday', 'store_type', 'assortment',\n",
+       "       'competition_distance', 'competition_open_since_month',\n",
+       "       'competition_open_since_year', 'promo2', 'promo2_since_week',\n",
+       "       'promo2_since_year', 'promo_interval'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.columns"
+   ]
   }
  ],
  "metadata": {
