--- a/store_sales_prediction.ipynb
+++ b/store_sales_prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,195 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2. Data Dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N° total de linhas:  1017209\n",
+      "N° total de colunas:  18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('N° total de linhas: ', df1.shape[0])\n",
+    "print('N° total de colunas: ', df1.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.3 Data Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store                          int64\n",
+       "DayOfWeek                      int64\n",
+       "Date                          object\n",
+       "Sales                          int64\n",
+       "Customers                      int64\n",
+       "Open                           int64\n",
+       "Promo                          int64\n",
+       "StateHoliday                  object\n",
+       "SchoolHoliday                  int64\n",
+       "StoreType                     object\n",
+       "Assortment                    object\n",
+       "CompetitionDistance          float64\n",
+       "CompetitionOpenSinceMonth    float64\n",
+       "CompetitionOpenSinceYear     float64\n",
+       "Promo2                         int64\n",
+       "Promo2SinceWeek              float64\n",
+       "Promo2SinceYear              float64\n",
+       "PromoInterval                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificação do tipo de dados\n",
+    "df1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convertendo a coluna date de object para datetime\n",
+    "df1.Date = pd.to_datetime(df1.Date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store                                 int64\n",
+       "DayOfWeek                             int64\n",
+       "Date                         datetime64[ns]\n",
+       "Sales                                 int64\n",
+       "Customers                             int64\n",
+       "Open                                  int64\n",
+       "Promo                                 int64\n",
+       "StateHoliday                         object\n",
+       "SchoolHoliday                         int64\n",
+       "StoreType                            object\n",
+       "Assortment                           object\n",
+       "CompetitionDistance                 float64\n",
+       "CompetitionOpenSinceMonth           float64\n",
+       "CompetitionOpenSinceYear            float64\n",
+       "Promo2                                int64\n",
+       "Promo2SinceWeek                     float64\n",
+       "Promo2SinceYear                     float64\n",
+       "PromoInterval                        object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Verificando novamente\n",
+    "df1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.5. Fillout NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store                             0\n",
+       "DayOfWeek                         0\n",
+       "Date                              0\n",
+       "Sales                             0\n",
+       "Customers                         0\n",
+       "Open                              0\n",
+       "Promo                             0\n",
+       "StateHoliday                      0\n",
+       "SchoolHoliday                     0\n",
+       "StoreType                         0\n",
+       "Assortment                        0\n",
+       "CompetitionDistance            2642\n",
+       "CompetitionOpenSinceMonth    323348\n",
+       "CompetitionOpenSinceYear     323348\n",
+       "Promo2                            0\n",
+       "Promo2SinceWeek              508031\n",
+       "Promo2SinceYear              508031\n",
+       "PromoInterval                508031\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Verificando os valores vazios\n",
+    "df1.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CompetitionDistance: 2642\n",
+    "\n",
+    "#CompetitionOpenSinceMonth: 323348\n",
+    "#CompetitionOpenSinceYear: 323348\n",
+    "#Promo2SinceWeek: 508031\n",
+    "#Promo2SinceYear: 508031\n",
+    "#PromoInterval: 508031"
    ]
   }
  ],
