criação das hipoteses

--- a/store_sales_prediction.ipynb
+++ b/store_sales_prediction.ipynb
@@ -1317,6 +1317,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.1. Mapa Mental de Hipoteses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
@@ -1335,6 +1342,135 @@
    ],
    "source": [
     "Image('img\\Mindmap_Hipoteses.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2. Criação de Hipoteses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1. Hipoteses Loja "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** Loja com maior quadro de funcionarios DEVERIAM vender mais.\n",
+    "\n",
+    "**2.** Loja com maior estoque DEVERIAM vender mais.\n",
+    "\n",
+    "**3.** Loja com menor porte (tamanho) DEVERIAM vender menos.\n",
+    "\n",
+    "**4.** Lojas com maior sortimento DEVERIAM vender mais.\n",
+    "\n",
+    "**5.** Lojas com competidores mais próximos deveriam vender menos.\n",
+    "\n",
+    "**6.** Lojas com competidores à mais tempo deveriam vender mais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.2. Hipoteses Produto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** Lojas que investem mais em marketing DEVERIAM vender mais\n",
+    "\n",
+    "**2.** Lojas que expoem mais os produtos da vitrine DEVERIAM vender mais\n",
+    "\n",
+    "**3.** Lojas que tem preços menores por mais tempo DEVERIAM vender mais\n",
+    "\n",
+    "**4.** Lojas com promoções mais agressivas (descontos maiores), deveriam vender mais\n",
+    "\n",
+    "**5.** Lojas com promoções ativas por mais tempo deveriam vender mais\n",
+    "\n",
+    "**6.** Lojas com mais dias de promoção deveriam vender mais\n",
+    "\n",
+    "**7.** Lojas com mais promoções consecutivas deveriam vender mais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.3. Hipoteses Tempo (Sazonalidade)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.** Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
+    "\n",
+    "**2.** Lojas deveriam vender mais ao longo dos anos\n",
+    "\n",
+    "**3.** Lojas deveriam vender mais no segundo semestre do ano\n",
+    "\n",
+    "**4.** Lojas deveriam vender mais depois do dia 10 de cada mês\n",
+    "\n",
+    "**5.** Lojas deveriam vender menos aos finais de semana\n",
+    "\n",
+    "**6.** Lojas deveriam vender menos durante os feriados escolares"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3. Lista Final das Hipóteses  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Priorizar as hipoteses para usar na seção de analise exploratoria de dados\n",
+    "- Para priorizar, separar as hipoteses com os dados que já tem disponivel na dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Hipoteses de Lojas\n",
+    "- **1.** Lojas com maior sortimento DEVERIAM vender mais.\n",
+    "- **2.** Lojas com competidores mais próximos deveriam vender menos.\n",
+    "- **3.** Lojas com competidores à mais tempo deveriam vender mais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Hipoteses de Produtos\n",
+    "- **4.** Lojas com promoções ativas por mais tempo deveriam vender mais.\n",
+    "- **5.** Lojas com mais dias de promoção deveriam vender mais.\n",
+    "- **6.** Lojas com mais promoções consecutivas deveriam vender mais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Hipoteses Temporal\n",
+    "- **7.** Lojas abertas durante o feriado de Natal deveriam vender mais.\n",
+    "- **8.** Lojas deveriam vender mais ao longo dos anos\n",
+    "- **9.** Lojas deveriam vender mais no segundo semestre do ano\n",
+    "- **10.** Lojas deveriam vender mais depois do dia 10 de cada mês\n",
+    "- **11.** Lojas deveriam vender menos aos finais de semana\n",
+    "- **12.** Lojas deveriam vender menos durante os feriados escolares"
    ]
   }
  ],
