--- a/m3_store_sales_prediction.ipynb
+++ b/m3_store_sales_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 0.0. IMPORTS"
+    "### 0.0. IMPORTS"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.0 DESCRIÇÃO DOS DADOS"
+    "### 1.0 DESCRIÇÃO DOS DADOS"
    ]
   },
   {
@@ -1310,7 +1310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.0 FEATURES ENGINEERING"
+    "### 2.0 FEATURES ENGINEERING"
    ]
   },
   {
@@ -1526,7 +1526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. FILTRAGEM DE VARIAVEIS "
+    "### 3.0 FILTRAGEM DE VARIAVEIS "
    ]
   },
   {
@@ -1847,7 +1847,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "##### 4.1.1 Response Variables"
    ]
   },
@@ -2123,7 +2122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4.3. Analise Bivariada"
+    "#### 4.3. Analise Multivariada"
    ]
   }
  ],
