terminado o encoding das variaveis categoricas

--- a/m5_store_sales_prediction.ipynb
+++ b/m5_store_sales_prediction.ipynb
@@ -42,7 +42,7 @@
     "from IPython.core.display   import HTML\n",
     "import datetime\n",
     "\n",
-    "from sklearn.preprocessing  import RobustScaler, MinMaxScaler\n"
+    "from sklearn.preprocessing  import RobustScaler, MinMaxScaler, LabelEncoder\n"
    ]
   },
   {
@@ -3326,6 +3326,265 @@
    "metadata": {},
    "source": [
     "#### 5.1. Transformação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>promo</th>\n",
+       "      <th>school_holiday</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>assortment</th>\n",
+       "      <th>competition_distance</th>\n",
+       "      <th>competition_open_since_month</th>\n",
+       "      <th>competition_open_since_year</th>\n",
+       "      <th>promo2</th>\n",
+       "      <th>promo2_since_week</th>\n",
+       "      <th>promo2_since_year</th>\n",
+       "      <th>is_promo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week_of_year</th>\n",
+       "      <th>year_week</th>\n",
+       "      <th>competition_since</th>\n",
+       "      <th>competition_time_month</th>\n",
+       "      <th>promo_since</th>\n",
+       "      <th>promo_time_week</th>\n",
+       "      <th>state_holiday_christmas</th>\n",
+       "      <th>state_holiday_easter_holiday</th>\n",
+       "      <th>state_holiday_public_holiday</th>\n",
+       "      <th>state_holiday_regular_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>-0.170968</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2008-09-01</td>\n",
+       "      <td>0.918919</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0.287016</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>-0.283871</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2007-11-01</td>\n",
+       "      <td>1.054054</td>\n",
+       "      <td>2010-03-22</td>\n",
+       "      <td>0.922551</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>1.903226</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2006-12-01</td>\n",
+       "      <td>1.202703</td>\n",
+       "      <td>2011-03-28</td>\n",
+       "      <td>0.801822</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>extended</td>\n",
+       "      <td>-0.275806</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2009-09-01</td>\n",
+       "      <td>0.743243</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0.287016</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>basic</td>\n",
+       "      <td>4.448387</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>-0.162162</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0.287016</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store  day_of_week       date  sales  promo  school_holiday store_type assortment  competition_distance  competition_open_since_month  competition_open_since_year  promo2  promo2_since_week  promo2_since_year  is_promo  year  month  day  week_of_year year_week competition_since  competition_time_month promo_since  promo_time_week  state_holiday_christmas  state_holiday_easter_holiday  state_holiday_public_holiday  state_holiday_regular_day\n",
+       "0      1            5 2015-07-31   5263      1               1          c      basic             -0.170968                             9                         2008       0                 31               2015         0   1.0      7   31            31   2015-30        2008-09-01                0.918919  2015-07-27         0.287016                    False                         False                         False                       True\n",
+       "1      2            5 2015-07-31   6064      1               1          a      basic             -0.283871                            11                         2007       1                 13               2010         0   1.0      7   31            31   2015-30        2007-11-01                1.054054  2010-03-22         0.922551                    False                         False                         False                       True\n",
+       "2      3            5 2015-07-31   8314      1               1          a      basic              1.903226                            12                         2006       1                 14               2011         0   1.0      7   31            31   2015-30        2006-12-01                1.202703  2011-03-28         0.801822                    False                         False                         False                       True\n",
+       "3      4            5 2015-07-31  13995      1               1          c   extended             -0.275806                             9                         2009       0                 31               2015         0   1.0      7   31            31   2015-30        2009-09-01                0.743243  2015-07-27         0.287016                    False                         False                         False                       True\n",
+       "4      5            5 2015-07-31   4822      1               1          a      basic              4.448387                             4                         2015       0                 31               2015         0   1.0      7   31            31   2015-30        2015-04-01               -0.162162  2015-07-27         0.287016                    False                         False                         False                       True"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 5.1.1 Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#state_holiday - One Hot Encoding\n",
+    "df5 = pd.get_dummies(df5, prefix=['state_holiday'], columns=['state_holiday'])\n",
+    "\n",
+    "#store_type - Label Encoding\n",
+    "le = LabelEncoder()\n",
+    "df5['store_type'] = le.fit_transform( df5['store_type'])\n",
+    "\n",
+    "#assortment - Ordinal Enconding\n",
+    "assortment_dict = {'basic':1,'extra':2,'extended':3}\n",
+    "df5['assortment'] = df5['assortment'].map(assortment_dict)"
    ]
   },
   {
